@@ -1,119 +1,0 @@
-.TH OP-BW 1 BRL-CAD
-.\"                        O P - B W . 1
-.\" BRL-CAD
-.\"
-.\" Copyright (c) 2005-2007 United States Government as represented by
-.\" the U.S. Army Research Laboratory.
-.\"
-.\" Redistribution and use in source (Docbook format) and 'compiled'
-.\" forms (PDF, PostScript, HTML, RTF, etc), with or without
-.\" modification, are permitted provided that the following conditions
-.\" are met:
-.\"
-.\" 1. Redistributions of source code (Docbook format) must retain the
-.\" above copyright notice, this list of conditions and the following
-.\" disclaimer.
-.\"
-.\" 2. Redistributions in compiled form (transformed to other DTDs,
-.\" converted to PDF, PostScript, HTML, RTF, and other formats) must
-.\" reproduce the above copyright notice, this list of conditions and
-.\" the following disclaimer in the documentation and/or other
-.\" materials provided with the distribution.
-.\"
-.\" 3. The name of the author may not be used to endorse or promote
-.\" products derived from this documentation without specific prior
-.\" written permission.
-.\"
-.\" THIS DOCUMENTATION IS PROVIDED BY THE AUTHOR AS IS'' AND ANY
-.\" EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
-.\" IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
-.\" PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
-.\" ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
-.\" CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT
-.\" OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
-.\" BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
-.\" LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
-.\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
-.\" USE OF THIS DOCUMENTATION, EVEN IF ADVISED OF THE POSSIBILITY OF
-.\" SUCH DAMAGE.
-.\"
-.\".\".\"
-.SH NAME
-op\(hybw \- read an image from the Optronics Scanner
-.SH SYNOPSIS
-.B op-bw
-.RB [ \-hv ]
-.RB [ \-S\  step]
-.RB [ \-x\  xoffset]
-.RB [ \-y\  yoffset]
-.RB [ \-s\  squaresize]
-.RB [ \-w\  width]
-.RB [ \-n\  height]
-> file.bw
-.SH DESCRIPTION
-.I Op-bw
-will read an image from an Optronics Scanner and save it in a
-.IR bw (5)
-format file.
-.PP
-By default, the output
-.I bw
-file will be 512x512 pixels.
-Specifying the
-.B \-h
-flag changes the default to 1024x1024.
-The
-.B \-s
-flag will set both the file height and width to be the given size, while
-.B \-w
-and
-.B \-n
-sets them individually.
-.PP
-The "width" or x axis runs around the drum of the scanner, and the
-height or y axis runs along the length of the drum.  The region
-saved from the scanner can be offset in x and y by some number of
-pixels by using the
-.B \-x
-and
-.B \-y
-flags.
-.PP
-The pixel size is set by the iris wheel on the Optronics.  The x spacing
-(around the drum) is set by the dial on the front pannel.  The y spacing
-is controlled by the step
-count, which is in multiples of 12.5 microns.  A step count of 4 (or 50
-microns) is the default.  This y spacing can be changed via the
-.B \-S
-flag.
-Your choices of resolution in microns,
-along with the corresponding step count and resolution in "dots per inch"
-are as follows:
-.sp 1
-.nf
-Microns  Step    Dpi
- 12.5     1     2032
- 25       2     1016
- 50       4      508
-100       8      254
-200      16      127
-400      32       63.5
-.br
-.fi
-.SH "SEE ALSO"
-brlcad(1), bw-fb(1), bw(5)
-.SH AUTHORS
-Phillip Dykstra
-.br
-Charles M. Kennedy
-.br
-Douglas Kingston
-.SH SOURCE
-SECAD/VLD Computing Consortium, Bldg 394
-.br
-The U. S. Army Ballistic Research Laboratory
-.br
-Aberdeen Proving Ground, Maryland  21005
-.SH "BUG REPORTS"
-Reports of bugs or problems should be submitted via electronic
-mail to <devs@brlcad.org>.
